# Lab00

./: CMakeLists.txt  README.md  main.cpp  whattotest.cpp
.github/workflows/: cmake.yml
